Fix Invisible Search Text

--- a/assets/shortcuts/stylesheet.css
+++ b/assets/shortcuts/stylesheet.css
@@ -104,7 +104,6 @@ input[type=text] {
   padding-bottom: 7px;
   padding-left: 15px;
   padding-right: 15px;
-  color:rgba(255,255,255,0);
   min-height: 40px;
   max-height: 40px;
   display: inline-block;
